--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize">
+
         <TextView
             android:id="@+id/tvDetailMakeModelYear"
             android:layout_width="wrap_content"
@@ -24,7 +25,8 @@
             android:layout_marginStart="29dp"
             android:layout_marginTop="30dp"
             android:text="Honda Odyssey 2007"
-            android:transitionName="makemodelyear"/>
+            android:textStyle="bold"
+            android:transitionName="makemodelyear" />
 
         <TextView
             android:id="@+id/tvDetailRate"
@@ -34,8 +36,9 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="30dp"
             android:layout_marginTop="19dp"
-            tools:text="Rate"
-            android:transitionName="rate"/>
+            android:textStyle="bold"
+            android:transitionName="rate"
+            tools:text="Rate" />
 
         <TextView
             android:id="@+id/tvDetailDescription"
