--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/tvYourName"
-            android:layout_marginTop="-170dp"
+            android:layout_marginTop="-160dp"
             app:srcCompat="@drawable/ed_logo_drawable_animation" />
 
         <TextView
@@ -48,7 +48,7 @@
             android:layout_below="@+id/tvYourName"
             android:layout_alignParentStart="true"
             android:layout_marginStart="44dp"
-            android:layout_marginTop="325dp"
+            android:layout_marginTop="340dp"
             android:text="Not sure how much to charge?"
             android:textSize="16sp" />
 
@@ -60,7 +60,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="44dp"
             android:layout_marginTop="6dp"
-            android:text="We can give you an estimate"
+            android:text="Get an estimate"
             android:textSize="16sp" />
 
         <TextView
@@ -71,7 +71,6 @@
             android:layout_alignParentEnd="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="6dp"
-            android:layout_marginBottom="121dp"
             android:layout_toEndOf="@+id/tvCarculatorPrompt2"
             android:text=" here!"
             android:textSize="16sp"
