--- a/app/src/main/res/layout/activity_user_car_feed.xml
+++ b/app/src/main/res/layout/activity_user_car_feed.xml
@@ -21,7 +21,9 @@
             android:layout_marginBottom="15dp"
             android:src="@drawable/outline_add_black_24dp"
             app:layout_anchor="@id/swipeUserContainer"
-            app:layout_anchorGravity="bottom|right|end" />
+            app:layout_anchorGravity="bottom|right|end"
+            android:backgroundTint="@color/colorPrimary"
+            app:tint="@color/white"/>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeUserContainer"
@@ -43,6 +45,7 @@
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/pbUserLoading" />
+            android:id="@+id/pbUserLoading"
+            android:indeterminateTint="@color/colorPrimary"/>
     </LinearLayout>
 </FrameLayout>
