--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -4,15 +4,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_first_fragment"
-            android:icon="@drawable/ic_one"
+            android:icon="@drawable/outline_manage_accounts_24"
             android:title="Account details" />
         <item
             android:id="@+id/nav_second_fragment"
-            android:icon="@drawable/ic_two"
+            android:icon="@drawable/outline_directions_car_24"
             android:title="View my cars" />
         <item
             android:id="@+id/nav_third_fragment"
-            android:icon="@drawable/ic_three"
+            android:icon="@drawable/outline_logout_24"
             android:title="Logout" />
     </group>
 </menu>
