--- a/app/src/main/res/menu/menu_action.xml
+++ b/app/src/main/res/menu/menu_action.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_filter"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
+        android:icon="@drawable/outline_filter_list_24"
         android:title="Filter"
         app:showAsAction="always"
         android:orderInCategory="2"/>
