--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context="com.example.wheeldeal.activities.EventDetailsActivity">
+    android:layout_height="match_parent"
+    tools:context="com.example.wheeldeal.oldclasses.EventDetailsActivity">
 
     <include
         layout="@layout/toolbar"
@@ -13,7 +13,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize">
 
         <TextView
@@ -86,5 +86,27 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="20dp"
             tools:text="$120/day" />
+
+        <TextView
+            android:id="@+id/tvAdditionalInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvGetDirections"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="22dp"
+            android:text="Additional Information about Your Trip"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvEventCarDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvAdditionalInfo"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="10dp"
+            tools:text="Description:" />
     </RelativeLayout>
+
 </RelativeLayout>
