--- a/app/src/main/res/layout/activity_user_car_feed.xml
+++ b/app/src/main/res/layout/activity_user_car_feed.xml
@@ -30,12 +30,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="visible">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvCars"
-                android:layout_width="409dp"
-                android:layout_height="729dp"
-                tools:layout_editor_absoluteX="1dp"
-                tools:layout_editor_absoluteY="1dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/empty_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="No cars registered!"
+                    android:visibility="gone"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvCars"
+                    android:layout_width="409dp"
+                    android:layout_height="729dp"
+                    tools:layout_editor_absoluteX="1dp"
+                    tools:layout_editor_absoluteY="1dp" />
+            </LinearLayout>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
     <LinearLayout android:orientation="vertical"
