--- a/app/src/main/res/layout/activity_user_car_feed.xml
+++ b/app/src/main/res/layout/activity_user_car_feed.xml
@@ -41,10 +41,11 @@
                     android:gravity="center"
                     android:text="No cars registered!"
                     android:visibility="gone"/>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvCars"
-                    android:layout_width="409dp"
-                    android:layout_height="729dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     tools:layout_editor_absoluteX="1dp"
                     tools:layout_editor_absoluteY="1dp" />
             </LinearLayout>
